# renkei

./: .gitignore  BACKENDS.md  CLAUDE.md  Cargo.toml  FUTURE_CONSIDERATIONS.md  LICENSE  PM-old.md  PM.md  PRD.md  README.md  install.sh  renkei.json  skills-lock.json  workflow-ticket.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
doc/prd/: backends.md  commands.md  hooks.md  installation.md  manifest.md  mcp.md  multi-backend.md  overview.md  roadmap.md  scope.md  storage.md  testing.md  user-stories.md
plans/: agents-as-default.md  install-messages.md  install-module-deepening.md  local-mcp.md  refactoring.md  renkei-cli-multi-backend.md  renkei-cli.md  self-update.md  workspace-member-selection.md
skills/renkei/: SKILL.md
src/: artifact.rs  cache.rs  cli.rs  config.rs  config_cmd.rs  conflict.rs  doctor.rs  env_check.rs  error.rs  frontmatter.rs  git.rs  hook.rs  install.rs  install_cache.rs  json_file.rs  list.rs  lockfile.rs  main.rs  manifest.rs  mcp.rs  migrate.rs  package.rs  package_store.rs  rkignore.rs  self_update.rs  source.rs  uninstall.rs  update_notifier.rs  user_config.rs  workspace.rs
src/backend/: agents.rs  claude.rs  codex.rs  cursor.rs  gemini.rs  mod.rs
src/doctor/: checks.rs  mod.rs  report.rs  (+1 more)
tests/: integration_config.rs  integration_doctor.rs  integration_install.rs  integration_install_messages.rs  integration_list.rs  integration_local_mcp.rs  integration_lockfile.rs  integration_migrate.rs  integration_package.rs  integration_uninstall.rs  integration_workspace.rs  integration_workspace_member_selection.rs
(+97 files in other folders)
