[package]
name = "rk"
version = "0.1.0"
edition = "2021"
description = "Package manager for AI agentic workflows"
license = "MIT"

[[bin]]
name = "rk"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = { version = "1", features = ["serde"] }
tar = "0.4"
flate2 = "1"
sha2 = "0.10"
thiserror = "2"
owo-colors = "4"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
